--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
-    <title>App标题标题</title>
+    <title>查看明细</title>
 </head>
 <body >
-<div id="app">
+<div id="pay-detail">
 
 </div>
 </body>
