--- a/src/tmpl/appTemplate.html
+++ b/src/tmpl/appTemplate.html
@@ -1,16 +1,2 @@
-<h3><span>支付宝支付</span></h3>
-<h2>2.0<span>元</span></h2>
-<table>
-    <thead>
-        <th>一口价</th><th>5元</th>
-    </thead>
-    <tbody>
-    <tr>
-        <th>出行券抵扣</th><th>-2元</th>
-    </tr>
-    <tr>
-        <th>余额抵扣</th><th>-1元</th>
-    </tr>
-    </tbody>
-</table>
-<p><a href="http://www.xiaojukeji.com">计价规则详情</a><img src="../img/sofa_icon_smallgrayarrow.png"></p>
+<h1><%=data.title%><img src="../img/sofa_icon_checked.png" width="16" height="16"></h1>
+<p><%=data.desc%></p>
